--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Copyright 2019 cvonrueden -->
 <head>
 	<title>An example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
