--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Copyright 2019 cvonrueden -->
 <head>
-	<title>An example Website</title>
+	<title>A Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
