Adding conflicting changes (on purpose)

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Copyright 2019 cvonrueden -->
 <head>
-	<title>An example Website</title>
+	<title>A test Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,10 +16,11 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
+			Test 123
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; cvonrueden 2014</p>
 	</footer>
 </body>
 </html>
