--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<!-- Copyright 2019 cvonrueden -->
+<!-- Copyright 2019 cvonrueden 
+Before conflicts
+-->
 <head>
 	<title>A Great Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
