changes to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!-- Copyright 2019 cvonrueden 
-After conflicts
+conflicts
+123
+Test
 -->
 <head>
 	<title>A Great Website</title>
