Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!-- Copyright 2019 cvonrueden 
 -->
 <head>
-	<title>A Great Website</title>
+	<title>Updating title for staching</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<!-- Content Goes Here -->
 		<p>
 			Just some content
-			Test 123
+			Test
 		</p>
 	</main>
 	<footer class="container">
