Changes after git stash branch

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!-- Copyright 2019 cvonrueden 
 -->
 <head>
-	<title>Updating title for staching</title>
+	<title>Updating title</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
